Finalised super krishak

--- a/about.html
+++ b/about.html
@@ -146,9 +146,12 @@
                 </div>
                 <div class="lg:col-span-6 lg:pr-10 lg:order-3">
                     <p class="mt-6 lg:mt-0 text-gray-700 text-base xl:text-lg text-left"></p>
-                    <p class="mt-6 lg:mt-0 text-gray-700 text-base xl:text-lg text-left">My journey in design has been strange to say the least. My first experience with any designing tool was in the late 2000s when I realized I could add moustaches to people using Photoshop. I kept experimenting with it and got moderately good at using Photoshop by the early 2010s thanks to the tutorials by Phlearn. Around the same time, I had started working as a book cover illustrator after someone liked my watercolor paintings I was making at art class. While I was adjusting the paintings for print, I stumbled upon the field of graphic design and went down the rabbit hole of YouTube tutorials and online classes on Coursera.</p>
+                    <p class="mt-6 lg:mt-0 text-gray-700 text-base xl:text-lg text-left">My journey in design has been strange, to say the least. My first experience with any designing tool was in the late 2000s when I realized I could add mustaches to people using Photoshop. I kept experimenting with thanks to Phlearn, I gradually got good at it. Around the same time, someone saw my watercolor paintings and I got a gig as a book cover illustrator. While adjusting the covers for print, I stumbled upon the field of graphic design. That led me down a deep rabbit hole of hundreds of YouTube tutorials and online classes on Coursera.</p>
                     <p class="mt-3 text-akayik-900 font-bold xl:text-lg text-left lg:hidden" id="readMore" onclick="moreButton();">Read More</p>
-                    <p class="mt-6 text-gray-700 text-base xl:text-lg text-left hidden lg:block" id="secondParagraph">My journey in design has been strange to say the least. My first experience with any designing tool was in the late 2000s when I realized I could add moustaches to people using Photoshop. I kept experimenting with it and got moderately good at using Photoshop by the early 2010s thanks to the tutorials by Phlearn. Around the same time, I had started working as a book cover illustrator after someone liked my watercolor paintings I was making at art class. While I was adjusting the paintings for print, I stumbled upon the field of graphic design and went down the rabbit hole of YouTube tutorials and online classes on Coursera.</p>
+                    <div class="mt-6 text-gray-700 text-base xl:text-lg text-left hidden lg:block"  id="secondParagraph">
+                        <p>I was also lucky to have good friends that suggested new things and always kept me motivated. A friend in college suggested that I look into designing logos to make some pocket change. I quickly realized that there was a lot to learn if I wanted to be good at making logos. That desire got me to look into the principles of design. Hoping to learn “on-site”, I also started working as a full-time graphic designer in 2016. After working as a graphic designer for a wide range of organizations across many fields, I stumbled upon the field of Human-Computer Interaction and I have never looked back since.</p>
+                        <p class="mt-6">Nowadays, I introduce myself as a <span class="font-bold">UI/UX Designer, hobby Digital Artist, and an occasional Visual Consultant</span>. I enjoy experimenting with photography, digital art and illustration, 3D designs, and a little bit of front-end development.</p>
+                    </div>                
                     <p class="mt-3 text-akayik-900 font-bold xl:text-lg text-left hidden" id="readLess" onclick="lessButton();">Read Less</p>
                 </div>
                 
@@ -183,6 +186,13 @@
             </div>
         </div>
     
+    </div>
+
+    <div class="bg-gray-200">
+        <div class="pt-8 lg:pt-20">
+            <img src="img/logo-gray-700.svg" class="h-10 mx-auto opacity-50" alt="">
+            <p class="text-gray-700 text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2022 Apurba Neupane</p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
