--- a/index.html
+++ b/index.html
@@ -236,6 +236,13 @@
             </div>
         </div>
     </div>
+
+    <div class="bg-gray-200">
+        <div class="pt-8 lg:pt-20">
+            <img src="img/logo-gray-700.svg" class="h-10 mx-auto opacity-50" alt="">
+            <p class="text-gray-700 text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2022 Apurba Neupane</p>
+        </div>
+    </div>
         
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
