--- a/off-grid-bazaar-project-management.html
+++ b/off-grid-bazaar-project-management.html
@@ -180,7 +180,7 @@
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block" id="content1">
-                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0 mb-8" >Having clear conversations with the multiple parties involved enabled me to understand their needs and their perspectives. It helped me to put myself in their shoes at times of friction, helped me avoid conflict, and ensure that things ran smoothly.</p>
+                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0 lg:mb-8" >Having clear conversations with the multiple parties involved enabled me to understand their needs and their perspectives. It helped me to put myself in their shoes at times of friction, helped me avoid conflict, and ensure that things ran smoothly.</p>
                 </div>
             </div>    
             <div>
@@ -208,7 +208,7 @@
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block lg:border-0" id="content3">
-                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg">It was important to make sure that everyone stayed on the same page for any new decisions or major updates. Scheduling routine check-ins, informing every concerned party after a major update/ breakthrough, and maintaining constant and frequent communication throughout the process helped make sure that no one was out of the loop. It also enabled a quick decision-making approach and ensured that things were always dealt with on time.</p>
+                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-4">It was important to make sure that everyone stayed on the same page for any new decisions or major updates. Scheduling routine check-ins, informing every concerned party after a major update/ breakthrough, and maintaining constant and frequent communication throughout the process helped make sure that no one was out of the loop. It also enabled a quick decision-making approach and ensured that things were always dealt with on time.</p>
                 </div>
             </div>
 
