--- a/super-krishak-system-design.html
+++ b/super-krishak-system-design.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case</title>
+    <title>Super Krishak : System Design</title>
     <link href="/css/tailwind.css" rel="stylesheet" />
     <link href="/css/build.css" rel="stylesheet" />
     <script defer src="script/myScript.js"></script>
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="relative float-left -z-1">
-            <img class="h-96 w-screen object-cover object-left block" src="img/MEM_Hero.jpg" alt="hero image" id="heroImage">
+            <img class="h-96 w-screen object-cover object-middle block" src="img/Krishak/Rural empowerment.webp" alt="Farmers of rural Nepal gathered around a projector" id="heroImage">
             <div class="bg-gradient-to-t from-akayik-900 h-32 w-screen absolute bottom-0">
                 <p class="opacity-0">.</p>
             </div>
@@ -127,8 +127,8 @@
             &nbsp;
             <h3 class="text-lg font-semibold opacity-80 xl:text-xl">System Design</h3>
             <div class="grid grid-cols-1 lg:grid-cols-12 xl:mt-4">
-                <h1 class="text-3xl font-bold col-span-1 lg:col-span-5 xl:text-4xl">I designed a gamified learning app for rural farmers</h1>
-                <p class="mt-4 text-base col-span-1 lg:col-span-6 lg:mt-0 lg:col-start-7 lg:text-sm xl:text-lg">"Krishak App" is an initiative by Gham Power for efficient delivery of agri-advisory to its large network of rural small-holder farmers. Gham Power has undertaken many initiatives to disperse information related to profitable and sustainable agriculture to its farmer network. Krishak App aims to gamify that process and uplift the rural farmers in Nepal.</p>
+                <h1 class="text-3xl font-bold col-span-1 lg:col-span-5 xl:text-4xl">I designed a gamified learning app for rural farmers in Nepal</h1>
+                <p class="mt-4 text-base col-span-1 lg:col-span-6 lg:mt-0 lg:col-start-7 lg:text-sm xl:text-lg">"Super Krishak" is an initiative by Gham Power for efficient delivery of agri-advisory to its large network of rural small-holder farmers. Gham Power has undertaken many initiatives to disperse information related to profitable and sustainable agriculture to its farmer network. Krishak App aims to gamify that process and uplift the rural farmers in Nepal.</p>
             </div>
         </div>
     </div>
@@ -136,13 +136,9 @@
     <div class="bg-white px-8 py-8 grid grid-cols-1 sm:px-28 lg:grid-cols-12 lg:px-14 lg:py-20 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
         <div class="lg:col-span-5">
             <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">For a targeted learning experience</h1>
-            <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg">Gham Power had been providing free and paid agri-training to small-holder farmers in Nepal for a long time. However, there was a need for a system to increase the involvement of farmers and to find out if the farmers were implementing what they had learned. There was also the problem of the lack of access to information for farmers who may have access to the internet but cannot access reliable information sources due to their lack of command of the English language. Apart from that, there was also the need for a control center that handled all of the ongoing processes.</p>
         </div>
         <div class="lg:col-span-6 lg:col-start-7">
-            <a class="glightbox mt-6" href="https://picsum.photos/1200/800" data-glightbox="type: image; description: A beautiful woman in the silent forest." data-gallery="g1" >
-                <img class="mt-8 lg:mt-0" src="https://picsum.photos/1200/800" alt="image" />
-            </a>
-            <p class="mt-2 text-sm italic text-gray-400 text-center xl:text-base">Some screengrabs from the old website of My Emotions Matter</p>
+            <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg">Gham Power had been providing free and paid agri-training to small-holder farmers in Nepal for a long time. However, there was a need for a system to increase the involvement of farmers and to find out if the farmers were implementing what they had learned. There was also the problem of the lack of access to information for farmers who may have access to the internet but cannot access reliable information sources due to their lack of command of the English language. Apart from that, there was also the need for a control center that handled all of the ongoing processes.</p>
         </div>
     </div>
 
@@ -152,7 +148,7 @@
                 <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">My Role</h1>
                 <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg">I was the lead designer involved in the process and I was responsible for designing the UI for the whole application as well as working with the in-house agri-team to plan the features and the overall presentation of the application. I was also responsible for the handover of the final designs to the development team.</p>
             </div>
-            <img id="roleSketch" class="hidden lg:inline-block lg:col-span-2 lg:h-52 lg:w-full lg:object-cover xl:h-64 2xl:pr-20 2xl:" src="img/MEM_Hero.jpg" alt="">            
+            <img id="roleSketch" class="hidden lg:inline-block lg:col-span-2 lg:h-52 lg:w-full lg:object-cover xl:h-64 2xl:pr-20 2xl:" src="img/Krishak/Super Krishak Icon.webp" alt="">            
         </div>
     </div>
 
@@ -187,6 +183,15 @@
                 </div>
                 <div class="hidden lg:block lg:border-0" id="content2">
                     <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg">Since the application was being designed keeping the farmers in mind, it was extremely important to understand the farmers and their requirements as well. So we visited the farmers in their homes in rural Nepal and tried to understand their appetite for information. Apart from that, we also used Gham Power's extensive network of farmers and reached out to them to seek clarification whenever we hit a wall in the decision-making.</p>
+                    <div class="mt-8 flex flex-wrap justify-left lg:flex-nowrap overflow:scroll lg:overflow-hidden">
+                        <a class="glightbox w-3/3 lg:w-3/6 inline" href="img/Krishak/Talking to farmers.webp" data-glightbox="type: image; " data-gallery="g2" >
+                            <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Talking to farmers.webp" alt="image" />
+                        </a>
+                        <a class="glightbox w-3/3 lg:w-3/6 inline" href="img/Krishak/Talking to farmers 2.webp" data-glightbox="type: image; " data-gallery="g2" >
+                            <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Talking to farmers 2.webp" alt="image" />
+                        </a>
+                    </div>
+                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base">Members of the Gham Power agri-team interacting with rural farmers in Nepal</p>
                 </div>
             </div>
 
@@ -196,7 +201,7 @@
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block lg:border-0" id="content3">
-                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg">It was important to understand the farming technologies, and terminologies and to understand the farming industry in general if I was to create a solution that catered to that particular industry. Talking to the in-house team of agri-experts in Gham Power helped in identifying the possible sectors that require change and intervention. The agri-experts were also a part of the designing process as the wireframes and the prototypes were heavily discussed with the agri-team before being sent off to the developers. The knowledge I gained also helped in fine-tuning the back-end later on. </p>
+                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg mb-2 lg:mb-0">It was important to understand the farming technologies, and terminologies and to understand the farming industry in general if I was to create a solution that catered to that particular industry. Talking to the in-house team of agri-experts in Gham Power helped in identifying the possible sectors that require change and intervention. The agri-experts were also a part of the designing process as the wireframes and the prototypes were heavily discussed with the agri-team before being sent off to the developers. The knowledge I gained also helped in fine-tuning the back-end later on. </p>
                 </div>
             </div>
 
@@ -223,17 +228,18 @@
                     <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4" >Gamification</h2>
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
-                <div class="hidden lg:block mb-10" id="content5">
-                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0" >It was difficult to make the farming population learn simply for the sake of learning. There was a need to give them a goal and add a sense of accomplishment to their learning process. We found the answer in gamifying the experience. To find a way to celebrate little activities and interactions by the farmers and create a sense of healthy competition in the farming community. Giving the farmers a goal to accomplish also acted as a great source of extrinsic motivation.</p>
+                <div class="hidden lg:block lg:mb-10" id="content5">
+                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0" >It was difficult to make the farming population learn simply for the sake of learning. There was a need to give them a goal and add a sense of accomplishment to their learning process. We found the answer in gamifying the experience. To find a way to celebrate little activities and interactions by the farmers and create a sense of healthy competition in the farming community. Giving the farmers a goal to accomplish also acted as a great source of extrinsic motivation. Farmers who amassed a certain amount of points would also get awarded in real-life.
+                    </p>
                     <div class="mt-8 flex flex-wrap justify-left lg:flex-nowrap overflow:scroll lg:overflow-hidden">
-                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="https://picsum.photos/1200/800" data-glightbox="type: image; description: A beautiful woman in the silent forest." data-gallery="g4" >
-                            <img class="pb-3 lg:pr-3 lg:pb-0" src="https://picsum.photos/1200/800" alt="image" />
+                        <a class="glightbox w-3/3 lg:w-3/6 inline" href="img/Krishak/Gamified Interactions.webp" data-glightbox="type: image; description: Smallest actions were rewarded with in-app points and the whole interaction was made as enternaining as possible" data-gallery="g3" >
+                            <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Gamified Interactions.webp" alt="image" />
                         </a>
-                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="https://picsum.photos/1200/800" data-glightbox="type: image; description: A beautiful woman in the silent forest." data-gallery="g4" >
-                            <img class="pb-3 lg:pr-3 lg:pb-0" src="https://picsum.photos/1200/800" alt="image" />
+                        <a class="glightbox w-3/3 lg:w-3/6 inline" href="img/Krishak/Weekly Quizzes.webp" data-glightbox="type: image; description: Daily quizzes acted as a great litmus test for the absorption of information by farmers as well as a common challenge for the users" data-gallery="g3" >
+                            <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Weekly Quizzes.webp" alt="image" />
                         </a>
                     </div>
-                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base">Some screengrabs from the old website of My Emotions Matter</p>
+                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base">Some efforts that went into gamifying the application and providing an entertaining experience</p>
                 </div>
             </div>
 
@@ -243,13 +249,10 @@
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block" id="content5">
-                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0" >Providing a section in the app that allowed farmers easy access to the relevant and timely topics concerning their industry and the capacity to access old information on a categorical basis would be a step in the right direction.</p>
+                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg pb-2 lg:pb-0" >Providing a section in the app that allowed farmers easy access to the relevant and timely topics concerning their industry and the capacity to access old information on a categorical basis would be a great information library. It would also act as a great news board to keep the farming population up-to-date with the new technology, farming methodologies, and the produce market.</p>
                     <div class="mt-8 flex flex-wrap justify-left lg:flex-nowrap overflow:scroll lg:overflow-hidden">
-                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="https://picsum.photos/1200/800" data-glightbox="type: image; description: A beautiful woman in the silent forest." data-gallery="g4" >
-                            <img class="pb-3 lg:pr-3 lg:pb-0" src="https://picsum.photos/1200/800" alt="image" />
-                        </a>
-                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="https://picsum.photos/1200/800" data-glightbox="type: image; description: A beautiful woman in the silent forest." data-gallery="g4" >
-                            <img class="pb-3 lg:pr-3 lg:pb-0" src="https://picsum.photos/1200/800" alt="image" />
+                        <a class="glightbox w-3/3 lg:w-4/5 inline" href="img/Krishak/Agri feed.webp" data-glightbox="type: image; description: A dedicated feed for up-to-date farming related information" data-gallery="g4" >
+                            <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Agri feed.webp" alt="image" />
                         </a>
                     </div>
                      <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">Some screengrabs from the old website of My Emotions Matter</p>
@@ -262,19 +265,19 @@
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block lg:border-0" id="content6">
-                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg">The back-end control for the application was designed to make the whole process as easy as possible. All possible use-cases were considered and the back-end was designed. </p>
+                    <p class="mt-2 text-base text-gray-700 lg:text-sm xl:text-lg">The back-end control for the application was designed to make the process of managing the whole application as easy as possible. All possible use-cases were considered and the back-end was designed to work as a CMS, control center, and CRM.</p>
                     <div class="mt-8 flex flex-wrap justify-left lg:flex-nowrap overflow:scroll lg:overflow-hidden">
-                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="https://picsum.photos/1200/800" data-glightbox="type: image; description: A beautiful woman in the silent forest." data-gallery="g5" >
-                            <img class="pb-3 lg:pr-3 lg:pb-0" src="https://picsum.photos/1200/800" alt="image" />
+                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="img/Krishak/Feed Article Controls.webp" data-glightbox="type: image; description: CRM controls for the agri-feed section of the application" data-gallery="g5" >
+                            <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Feed Article Controls.webp" alt="image" />
                         </a>
-                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="https://picsum.photos/1200/800" data-glightbox="type: image; description: A beautiful woman in the silent forest." data-gallery="g5" >
-                            <img class="pb-3 lg:pr-3 lg:pb-0" src="https://picsum.photos/1200/800" alt="image" />
+                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="img/Krishak/Quiz Controls.webp" data-glightbox="type: image; description: CRM controls for the weekly quiz section of the application" data-gallery="g5" >
+                            <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Quiz Controls.webp" alt="image" />
                         </a>
-                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="https://picsum.photos/1200/800" data-glightbox="type: image; description: A beautiful woman in the silent forest." data-gallery="g5" >
-                            <img class="pb-3 lg:pr-3 lg:pb-0" src="https://picsum.photos/1200/800" alt="image" />
+                        <a class="glightbox w-3/3 lg:w-1/3 inline" href="img/Krishak/Training Controls.webp" data-glightbox="type: image; description: CRM controls for the training section of the application" data-gallery="g5" >
+                            <img class="pb-3 lg:pr-3 lg:pb-0" src="img/Krishak/Training Controls.webp" alt="image" />
                         </a>
                     </div>
-                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">Some screengrabs from the old website of My Emotions Matter</p>
+                     <p class="mt-2 mb-3 text-sm italic text-gray-400 text-left xl:text-base lg:mb-0">Some CRM controls of the back-end</p>
                 </div>
             </div>
 
@@ -319,7 +322,10 @@
     </div>
 
     <div class="bg-akayik-900">
-        <p class="text-white text-center text-xs opacity-50 pb-4 pt-8 xl:text-sm">Copyright</p>
+        <div class="pt-8 lg:pt-20">
+            <img src="img/logo-white.svg" class="h-10 mx-auto" alt="">
+            <p class="text-white text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2022 Apurba Neupane</p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
