emoji as the website favicon

--- a/OGB-connect-product-design.html
+++ b/OGB-connect-product-design.html
@@ -8,6 +8,7 @@
     <link href="/css/build.css" rel="stylesheet" />
     <script defer src="script/myScript.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👀</text></svg>">
 </head>
 <body class="font-sans overflow-y-scroll overflow-x-hidden" id="body" onload="hideLoader(); slideHeader(); roleResize();" onscroll="smallHeader(); slideHeader(); caseHeaderBg();">
 
