Small testimonial addition

--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                 </div>
                 <div class="testimonialContainer  testimonialSlider" id="testimonialContainer">
                     <div class="testimonial">
-                        <p class="testimonialcontent">A tatti designer through and through. Couldn’t design a good application if his life depended on it. Worst addition to my team so far. Also a major pain in the ass to work with. Don’t recommend.</p>
-                        <p class="testimonialPerson">Apurba Neupane</p>
-                        <p class="testimonialCompany">CEO, Nothing</p>
+                        <p class="testimonialcontent">I find it easy to work with people who take the time to listen and understand first before offering their two cents. Apurba does just that. He's been easy to work with because he seeks feedback. Thanks to him, we have been better able to communicate our brand values than before.</p>
+                        <p class="testimonialPerson">Sagar Satyal</p>
+                        <p class="testimonialCompany">My Emotions Matter</p>
                     </div>
                     <div class="testimonial">
                         <p class="testimonialcontent">A tatti designer through and through. Couldn’t design a good application if his life depended on it. Worst addition to my team so far. Also a major pain in the ass to work with. Don’t recommend.</p>
