--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
             <div class="col-span-1 order-1 md:order-2 lg:row-span-1 lg:col-span-4">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 md:mb-8 lg:mb-10">Links</h1>
                 <menu>
-                    <a href="index.html"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Work</li></a>
-                    <a href="about.html"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">About</li></a>
-                    <a href="about.html#contactInformation"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Contact</li></a>
+                    <a href="index.html" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Work</li></a>
+                    <a href="about.html" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">About</li></a>
+                    <a href="about.html#contactInformation" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Contact</li></a>
                 </menu>
             </div>
 
@@ -66,9 +66,10 @@
             <div class="col-span-1 ml-4 order-2 md:order-3 lg:ml-0 lg:row-span-1 lg:col-span-4">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 md:mb-8 lg:mb-10">Contact</h1>
                 <menu>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Email</li>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Behance</li>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Instagram</li>
+                    <a href="mailto:hello@akayik.com"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Email</li></a>
+                    <a href="https://www.linkedin.com/in/akayik" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">LinkedIn</li></a>
+                    <a href="https://www.behance.net/akayik" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Behance</li></a>
+                    <a href="https://www.instagram.com/akayik_" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Instagram</li></a>
                 </menu>
             </div>
 
@@ -76,7 +77,7 @@
             <div class="col-span-2 order-3 md:order-1  md:mb-16 lg:row-span-2 lg:col-span-8">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 mt-8 md:mt-0 md:mb-8 lg:mb-10">Recent Case Studies</h1>
                 <menu>
-                    <a class="block" href="channel-simplify-SaaS.html">
+                    <a class="block" href="channel-simplify-SaaS.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Channel Simplify
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -84,7 +85,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">SaaS Product Design</span>
                         </li>
                     </a>
-                    <a class="block" href="OGB-connect-product-design.html">
+                    <a class="block" href="OGB-connect-product-design.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         OGB: Connect
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -92,7 +93,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">Product Design</span>
                         </li>
                     </a>
-                    <a class="block" href="super-krishak-system-design.html">
+                    <a class="block" href="super-krishak-system-design.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Super Krishak
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -100,7 +101,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">System Design</span>
                         </li>
                     </a>
-                    <a class="block" href="my-emotions-matter-website-redesign.html">
+                    <a class="block" href="my-emotions-matter-website-redesign.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         My Emotions Matter
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -108,7 +109,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">Website Re-design</span>
                         </li>
                     </a>
-                    <a class="block" href="off-grid-bazaar-project-management.html">
+                    <a class="block" href="off-grid-bazaar-project-management.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Off Grid Bazaar
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -139,7 +140,7 @@
         <div class="px-8 pt-36 pb-4 grid grid-cols-1 sm:px-28 lg:px-14 lg:pb-20 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
             <div class="text-center lg:grid lg:grid-cols-12">
                 <p class="text-lg text-gray-500 font-semibold xl:text-xl lg:col-span-4 lg:col-start-5">Hi there. I am Apurba 👋</p>
-                <h1 class="text-3xl text-akayik-900 font-medium xl:text-4xl lg:col-span-6 lg:col-start-4">I am a <span class="font-bold">UX Designer</span></h1>
+                <h1 class="mt-2 text-4xl text-akayik-900 font-medium xl:text-4xl lg:col-span-6 lg:col-start-4">I design <span class="font-bold">UX Solutions</span></h1>
                 <p class="mt-6 text-gray-700 text-base xl:text-lg lg:col-span-8 lg:col-start-3">I have been designing minimal, goal driven products and interfaces since 2018. I enjoy balancing user needs and business needs to create problem oriented human-centered designs.</p>
             </div>
         </div>
