--- a/my-emotions-matter-website-redesign.html
+++ b/my-emotions-matter-website-redesign.html
@@ -42,9 +42,9 @@
             <div class="col-span-1 order-1 md:order-2 lg:row-span-1 lg:col-span-4">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 md:mb-8 lg:mb-10">Links</h1>
                 <menu>
-                    <a href="index.html"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Work</li></a>
-                    <a href="about.html"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">About</li></a>
-                    <a href="about.html#contactInformation"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Contact</li></a>
+                    <a href="index.html" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Work</li></a>
+                    <a href="about.html" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">About</li></a>
+                    <a href="about.html#contactInformation" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Contact</li></a>
                 </menu>
             </div>
 
@@ -52,9 +52,10 @@
             <div class="col-span-1 ml-4 order-2 md:order-3 lg:ml-0 lg:row-span-1 lg:col-span-4">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 md:mb-8 lg:mb-10">Contact</h1>
                 <menu>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Email</li>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Behance</li>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Instagram</li>
+                    <a href="mailto:hello@akayik.com"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Email</li></a>
+                    <a href="https://www.linkedin.com/in/akayik" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">LinkedIn</li></a>
+                    <a href="https://www.behance.net/akayik" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Behance</li></a>
+                    <a href="https://www.instagram.com/akayik_" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Instagram</li></a>
                 </menu>
             </div>
 
@@ -62,7 +63,7 @@
             <div class="col-span-2 order-3 md:order-1  md:mb-16 lg:row-span-2 lg:col-span-8">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 mt-8 md:mt-0 md:mb-8 lg:mb-10">Recent Case Studies</h1>
                 <menu>
-                    <a class="block" href="channel-simplify-SaaS.html">
+                    <a class="block" href="channel-simplify-SaaS.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Channel Simplify
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -70,7 +71,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">SaaS Product Design</span>
                         </li>
                     </a>
-                    <a class="block" href="OGB-connect-product-design.html">
+                    <a class="block" href="OGB-connect-product-design.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         OGB: Connect
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -78,7 +79,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">Product Design</span>
                         </li>
                     </a>
-                    <a class="block" href="super-krishak-system-design.html">
+                    <a class="block" href="super-krishak-system-design.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Super Krishak
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -86,7 +87,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">System Design</span>
                         </li>
                     </a>
-                    <a class="block" href="my-emotions-matter-website-redesign.html">
+                    <a class="block" href="my-emotions-matter-website-redesign.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         My Emotions Matter
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -94,7 +95,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">Website Re-design</span>
                         </li>
                     </a>
-                    <a class="block" href="off-grid-bazaar-project-management.html">
+                    <a class="block" href="off-grid-bazaar-project-management.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Off Grid Bazaar
                         <span class="hidden md:inline-block lg:hidden">|</span>
