--- a/super-krishak-system-design.html
+++ b/super-krishak-system-design.html
@@ -42,9 +42,9 @@
             <div class="col-span-1 order-1 md:order-2 lg:row-span-1 lg:col-span-4">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 md:mb-8 lg:mb-10">Links</h1>
                 <menu>
-                    <a href="index.html"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Work</li></a>
-                    <a href="about.html"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">About</li></a>
-                    <a href="about.html#contactInformation"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Contact</li></a>
+                    <a href="index.html" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Work</li></a>
+                    <a href="about.html" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">About</li></a>
+                    <a href="about.html#contactInformation" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Contact</li></a>
                 </menu>
             </div>
 
@@ -52,9 +52,10 @@
             <div class="col-span-1 ml-4 order-2 md:order-3 lg:ml-0 lg:row-span-1 lg:col-span-4">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 md:mb-8 lg:mb-10">Contact</h1>
                 <menu>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Email</li>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Behance</li>
-                    <li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Instagram</li>
+                    <a href="mailto:hello@akayik.com"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Email</li></a>
+                    <a href="https://www.linkedin.com/in/akayik" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">LinkedIn</li></a>
+                    <a href="https://www.behance.net/akayik" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Behance</li></a>
+                    <a href="https://www.instagram.com/akayik_" target="_blank" rel="noopener noreferrer"><li class="mb-2 font-semibold text-sm lg:text-xl lg:mb-4 hover:pl-3">Instagram</li></a>
                 </menu>
             </div>
 
@@ -62,7 +63,7 @@
             <div class="col-span-2 order-3 md:order-1  md:mb-16 lg:row-span-2 lg:col-span-8">
                 <h1 class="text-xl font-bold lg:text-3xl mb-4 mt-8 md:mt-0 md:mb-8 lg:mb-10">Recent Case Studies</h1>
                 <menu>
-                    <a class="block" href="channel-simplify-SaaS.html">
+                    <a class="block" href="channel-simplify-SaaS.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Channel Simplify
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -70,7 +71,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">SaaS Product Design</span>
                         </li>
                     </a>
-                    <a class="block" href="OGB-connect-product-design.html">
+                    <a class="block" href="OGB-connect-product-design.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         OGB: Connect
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -78,7 +79,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">Product Design</span>
                         </li>
                     </a>
-                    <a class="block" href="super-krishak-system-design.html">
+                    <a class="block" href="super-krishak-system-design.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Super Krishak
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -86,7 +87,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">System Design</span>
                         </li>
                     </a>
-                    <a class="block" href="my-emotions-matter-website-redesign.html">
+                    <a class="block" href="my-emotions-matter-website-redesign.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         My Emotions Matter
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -94,7 +95,7 @@
                         <span class="font-normal text-sm opacity-70 lg:text-lg">Website Re-design</span>
                         </li>
                     </a>
-                    <a class="block" href="off-grid-bazaar-project-management.html">
+                    <a class="block" href="off-grid-bazaar-project-management.html" target="_blank" rel="noopener noreferrer">
                         <li class="font-semibold mb-3 in inline-block lg:mb-8 lg:text-xl hover:pl-6">
                         Off Grid Bazaar
                         <span class="hidden md:inline-block lg:hidden">|</span>
@@ -135,13 +136,15 @@
     </div>
 
     <div class="bg-white px-8 py-8 grid grid-cols-1 sm:px-28 lg:grid-cols-12 lg:px-14 lg:py-20 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
+        <h3 class="text-lg font-semibold text-gray-900 opacity-75 xl:text-xl 2xl:mb-4 lg:col-span-12">Objective</h3>
         <div class="lg:col-span-5">
-            <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">For a targeted learning experience</h1>
+            <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">Tailored learning experience for targeted audience</h1>
         </div>
         <div class="lg:col-span-6 lg:col-start-7">
-            <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg">Gham Power had been providing free and paid agri-training to small-holder farmers in Nepal for a long time. However, there was a need for a system to increase the involvement of farmers and to find out if the farmers were implementing what they had learned. There was also the problem of the lack of access to information for farmers who may have access to the internet but cannot access reliable information sources due to their lack of command of the English language. Apart from that, there was also the need for a control center that handled all of the ongoing processes.</p>
+            <p class="mt-4 lg:mt-0 text-base text-gray-700 lg:text-sm xl:text-lg">Gham Power had been providing free and paid agri-training to small-holder farmers in Nepal for a long time. However, there was a need for a system to increase the involvement of farmers and to find out if the farmers were implementing what they had learned. There was also the problem of the lack of access to information for farmers who may have access to the internet but cannot access reliable information sources due to their lack of command of the English language. Apart from that, there was also the need for a control center that handled all of the ongoing processes.</p>
         </div>
     </div>
+
 
     <div class="bg-[#e8e7ee]">
         <div class="px-8 sm:px-28 lg:px-0 grid grid-cols-1 lg:grid-cols-5 pt-8 pb-8 lg:pt-0 lg:pb-0 2xl:max-w-screen-2xl 2xl:mx-auto" id="roleContainer">
@@ -246,7 +249,7 @@
 
             <div>
                 <div class="border-b-2 py-2 flex justify-between items-center lg:py-0 lg:border-0" id="heading5" onclick="accordion(this.id);" >
-                    <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4" >Agri-feed</h2>
+                    <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4" >Curated Agri-feed</h2>
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block" id="content5">
