Updated panku bro's testimonials

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <script defer src="script/myScript.js"></script>
     <!-- CDN for Glightbox -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👀</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>">
 </head>
 <body class="font-sans overflow-y-scroll overflow-x-hidden" id="body" onload="hideLoader(); slideHeader();" onscroll="smallHeader(); slideHeader();">
 
@@ -152,7 +152,7 @@
                     <p class="mt-3 text-akayik-900 font-bold xl:text-lg text-left lg:hidden" id="readMore" onclick="moreButton();">Read More</p>
                     <div class="mt-6 text-gray-700 text-base xl:text-lg text-left hidden lg:block"  id="secondParagraph">
                         <p>I was also lucky to have good friends that suggested new things and always kept me motivated. A friend in college suggested that I look into designing logos to make some pocket change. I quickly realized that there was a lot to learn if I wanted to be good at making logos. That desire got me to look into the principles of design. Hoping to learn “on-site”, I also started working as a full-time graphic designer in 2016. After working as a graphic designer for a wide range of organizations across many fields, I stumbled upon the field of Human-Computer Interaction and I have never looked back since.</p>
-                        <p class="mt-6">Nowadays, I introduce myself as a <span class="font-bold">UI/UX Designer, hobby Digital Artist, and an occasional Visual Consultant</span>. I enjoy experimenting with photography, digital art and illustration, 3D designs, and a little bit of front-end development.</p>
+                        <p class="mt-6">Nowadays, I introduce myself as a <span class="font-bold">UI/UX Designer.</span>I'm also hobby Digital Artist, and an occasional Visual Consultant. I enjoy experimenting with photography, digital art and illustration, 3D designs, and a little bit of front-end development.</p>
                     </div>                
                     <p class="mt-3 text-akayik-900 font-bold xl:text-lg text-left hidden" id="readLess" onclick="lessButton();">Read Less</p>
                 </div>
