--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- CDN for two slick slider css -->
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"/>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👀</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>">
 
 </head>
 
@@ -220,9 +220,9 @@
                         <p class="testimonialCompany">My Emotions Matter</p>
                     </div>
                     <div class="testimonial">
-                        <p class="testimonialcontent">A tatti designer through and through. Couldn’t design a good application if his life depended on it. Worst addition to my team so far. Also a major pain in the ass to work with. Don’t recommend.</p>
-                        <p class="testimonialPerson">Neupane Apurba</p>
-                        <p class="testimonialCompany">CEO, Nothing</p>
+                        <p class="testimonialcontent">Apurba takes his clients on a co-creative journey that all feels effortless in the end. I have collaborated in quite a number of Commissioned as well as Volunteering projects with him. The outputs and the support has kept me continuing to recommend him to everyone requiring a design solution for more than 5 years now. </p>
+                        <p class="testimonialPerson">Pankaj Niroula</p>
+                        <p class="testimonialCompany">Tech Lead, King's College</p>
                     </div>
                     <div class="testimonial">
                         <p class="testimonialcontent">A tatti designer through and through. Couldn’t design a good application if his life depended on it. Worst addition to my team so far. Also a major pain in the ass to work with. Don’t recommend.</p>
@@ -240,7 +240,7 @@
     </div>
 
     <div class="bg-gray-200">
-        <div class="pt-8 lg:pt-20">
+        <div class="pt-8 lg:pt-10">
             <img src="img/logo-gray-700.svg" class="h-10 mx-auto opacity-50" alt="">
             <p class="text-gray-700 text-center text-xs opacity-50 pb-8 lg:pb-12 xl:text-sm mt-2">© 2022 Apurba Neupane</p>
         </div>
