Copy changes and an overlay change

--- a/OGB-connect-product-design.html
+++ b/OGB-connect-product-design.html
@@ -129,7 +129,7 @@
             &nbsp;
             <h3 class="text-lg font-semibold opacity-80 xl:text-xl">Product Design</h3>
             <div class="grid grid-cols-1 lg:grid-cols-12 xl:mt-4">
-                <h1 class="text-3xl font-bold col-span-1 lg:col-span-5 xl:text-4xl">I helpred re-design a lead management pipeline</h1>
+                <h1 class="text-3xl font-bold col-span-1 lg:col-span-5 xl:text-4xl">I re-designed a lead management pipeline</h1>
                 <p class="mt-4 text-base col-span-1 lg:col-span-6 lg:mt-0 lg:col-start-7 lg:text-sm xl:text-lg">Gham Power, a multiple award-winning solar company, had been working with microfinance organizations to make their IoT-based yield improvement solutions more accessible to rural farmers. They had even designed a lead collector application for that very purpose. I was brought in to increase lead generation and improve the pre-existing app.</p>
             </div>
         </div>
@@ -138,7 +138,7 @@
     <div class="bg-white px-8 py-8 grid grid-cols-1 sm:px-28 lg:grid-cols-12 lg:px-14 lg:py-20 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
         <div class="lg:col-span-5">
             <h3 class="text-lg font-semibold text-gray-900 opacity-75 xl:text-xl xl:mb-4">Problem</h3>
-            <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">The current method was complex and users were finding it to be difficult</h1>
+            <h1 class="text-3xl font-bold text-akayik-900 xl:text-4xl">The users were finding the current method complicated and difficult</h1>
         </div>
         <div class="lg:col-span-6 lg:col-start-7">
             <p class="mt-4 text-base text-gray-700 lg:text-sm xl:text-lg">The original application was serving two purposes: lead collection and gathering data on farmers. This meant that for a lead to be registered, the entire farming details of that farmer would have to be registered as well. There were 27 mandatory fields and 20+ additional fields that were optional. The form took more than 6 minutes and 40 seconds to fill out completely.</p>
