--- a/channel-simplify-SaaS.html
+++ b/channel-simplify-SaaS.html
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="relative float-left -z-1">
-            <img class="h-96 w-screen object-cover object-middle block" src="img/ChannelSimplify/OverlayHero_Hotel Receptionists_Using a phone_Using the computer_Hotel Registration.webp" alt="Two hotel receptionists at the front desk of the hotel. One receptionist is using a computer while the other is on the phone." id="heroImage">
+            <img class="h-96 w-screen object-cover object-middle block" src="img/ChannelSimplify/Overlay_Hotel Client interacting with front desk employees.webp" alt="Two hotel receptionists at the front desk of the hotel. One receptionist is using a computer while the other is on the phone." id="heroImage">
             <div class="bg-gradient-to-t from-akayik-900 h-32 w-screen absolute bottom-0">
                 <p class="opacity-0">.</p>
             </div>
