--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
 
         <div class="px-8 pb-4 sm:px-28 lg:pt-14 lg:pb-12 lg:px-10 xl:px-20 2xl:max-w-screen-2xl 2xl:mx-auto">
             <div class="text-center lg:px-40">
-                <p class="text-gray-700 text-base lg:text-sm xl:text-lg pb-4 lg:col-span-10 lg:col-start-2 noHeight">I have been working in the field of <b>Digital Graphics, Logo Design, Branding, and Interface Design</b> at various levels since 2013. I have enojoyed tackling every brief as a problem to be solved and I love learning new things and implementing them into my process to serve people better.</p>
-                <a class="text-gray-500 block pb-10 lg:pb-4 lg:col-span-4 lg:col-start-5 mt-8" href="about.html"><u>More about me</u></a>
+                <p class="text-gray-700 text-base lg:text-sm xl:text-lg pb-4 lg:col-span-10 lg:col-start-2 noHeight">Before I donned the hat of a UX Designer, I had other hats: Graphic Designer, Logo Designer, Branding Specialist, and Brand Consultant. While the labels have changed over the years, my view on design hasn’t. For me, design will always be about solving important problems. I have enjoyed designing for as long as I can remember and I love briefs that push me to my limits and force me to evolve. I love learning new things, implementing them in my process, and serving people better. </p>
+                <a class="text-akayik-900 block text-base lg:text-sm xl:text-lg pb-10 lg:pb-4 lg:col-span-4 lg:col-start-5 mt-8 lg:font-medium" href="about.html" target="_blank" rel="noopener noreferrer"><u>Learn more about me as a designer and my design journey</u></a>
             </div>
         </div>
 
