--- a/super-krishak-system-design.html
+++ b/super-krishak-system-design.html
@@ -265,7 +265,7 @@
 
             <div class="lg:mt-12">
                 <div class="border-b-2 py-2 flex justify-between items-center lg:py-0 lg:border-0" id="heading6" onclick="accordion(this.id);">
-                    <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4">Elaborate system control</h2>
+                    <h2 class="text-xl font-bold text-gray-800 xl:text-2xl pb-2 lg:pb-4">Bespoke system control</h2>
                     <img class="bg-gray-300 bg-opacity-0 rounded-full w-8 h-8 p-1 opacity-50 lg:hidden" src="img/ArrowBottom.svg" alt="">
                 </div>
                 <div class="hidden lg:block lg:border-0" id="content6">
